# Imagen

./: .gitignore  README.md  pyproject.toml
src/imagen/: __init__.py  __main__.py  aspect.py  cli.py  config.py  docs.py  errors.py  output.py
src/imagen/providers/: __init__.py  base.py  chatgpt.py  comfyui.py  nano_banana.py
src/imagen/templates/comfyui/: sdxl.json.j2
tests/: test_aspect.py  test_cli.py  test_comfyui_template.py
